tests/ui/macros/issue-95943.stderr
error: cannot find macro parameter `$x` in this scope
  --> $DIR/issue-95943.rs:9:9
   |
LL |         $x;
   |         ^-
   |         ||
   |         |macro metavariable not found
   |         expected expression
...
LL |     m!()
   |     ---- in this macro invocation
   |
   = note: this error originates in the macro `m` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

